@@ -1,7 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-  - add ignore_not_found attribute
+  - add FFI::Platypus#ignore_not_found attribute
+  - add FFI::Platypus#package method
   - Module::Build::FFI was moved into this distribution
     (formerly distributed as part of FFI-Util)
 
